2003-08-12  Hans Petter Jansson  <hpj@ximian.com>

	* backend/ebook/e-destination.c (e_destination_dispose): Chain.

	* gui/component/e-address-widget.c (e_address_widget_destroy): Chain.
	Prevent double frees. Prevent double GSource removal.

	* gui/component/e-cardlist-model.c (e_cardlist_model_class_init):
	Store parent class.
	(e_cardlist_model_dispose): Chain. Prevent double frees and unrefs.

	* gui/contact-editor/e-contact-editor-address.c
	(e_contact_editor_address_dispose): Chain.

	* gui/contact-editor/e-contact-editor-fullname.c
	(e_contact_editor_fullname_dispose): Chain.

	* gui/contact-list-editor/e-contact-list-editor.c
	(e_contact_list_editor_dispose): Chain.

	* gui/contact-list-editor/e-contact-list-model.c
	(contact_list_model_destroy): Chain. Prevent double frees and unrefs.

	* gui/widgets/e-addressbook-reflow-adapter.c (addressbook_dispose):
	Chain.

	* gui/widgets/e-addressbook-table-adapter.c (addressbook_dispose):
	Chain.

	* gui/widgets/e-addressbook-treeview-adapter.c (addressbook_destroy):
	Chain. Prevent double free.

	* gui/widgets/gal-view-minicard.c (gal_view_minicard_dispose):
	Chain. Prevent double free and detach.

	* gui/widgts/gal-view-treeview.c (gal_view_treeview_dispose):
	Chain. Prevent double free and detach.

	* printins/e-contact-print-style-editor.c
	(e_contact_print_stule_editor_destroy): Chain. Prevent double unref.

2003-07-23  Chris Toshok  <toshok@ximian.com>

	* printing/e-contact-print.c (e_contact_print_response): deal with
	"uses_list".  Fixes #30839.
	(e_contact_print_dialog_new): use GINT_TO_POINTER instead of
	casting to void*, and set "uses_list" to FALSE.
	(e_contact_print_card_dialog_new): same.
	(e_contact_print_card_list_dialog_new): same, but set "uses_list"
	to TRUE.

2003-07-23  Chris Toshok  <toshok@ximian.com>

	* backend/ebook/e-book.c (e_book_dispose): fix a typo.

2003-07-22  Akira TAGOH  <tagoh@redhat.com>

	* printing/e-contact-print-envelope.c (ecpe_print): Use 'Sans'